this will add all files ad folders

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crud-app",
-  "homepage": "https://RahulWhiztekcorp.github.io/React-CRUD-App",
+  "homepage": "https://RahulWhiztekcorp.github.io/crud-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
