--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "crud-app",
+  "homepage": "https://RahulWhiztekcorp.github.io/deploy-app-2023",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -16,9 +17,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
